--- a/package.json
+++ b/package.json
@@ -45,5 +45,18 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.1.2"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 11.1.2.",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/PedroRCZ/Sig-Camaronera.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/PedroRCZ/Sig-Camaronera/issues"
+  },
+  "homepage": "https://github.com/PedroRCZ/Sig-Camaronera#readme"
 }
